@@ -1,14 +1,14 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) [2018] Payara Foundation and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018-2024 Payara Foundation and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
  * and Distribution License("CDDL") (collectively, the "License").  You
  * may not use this file except in compliance with the License.  You can
  * obtain a copy of the License at
- * https://github.com/payara/Payara/blob/master/LICENSE.txt
+ * https://github.com/payara/Payara/blob/main/LICENSE.txt
  * See the License for the specific
  * language governing permissions and limitations under the License.
  *
@@ -39,6 +39,7 @@
  */
 package fish.payara.microprofile.openapi.resource.rule;
 
+import fish.payara.microprofile.openapi.impl.OpenAPISupplier;
 import fish.payara.microprofile.openapi.impl.model.OpenAPIImpl;
 import fish.payara.microprofile.openapi.impl.processor.ApplicationProcessor;
 import fish.payara.microprofile.openapi.impl.processor.BaseProcessor;
@@ -46,6 +47,7 @@ import fish.payara.microprofile.openapi.impl.processor.FilterProcessor;
 import fish.payara.microprofile.openapi.resource.classloader.ApplicationClassLoader;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import static java.util.Arrays.asList;
 import java.util.Collections;
@@ -78,12 +80,16 @@ public class ApplicationProcessedDocument {
             new BaseProcessor(asList(new URL("http://localhost:8080/testlocation_123"))).process(document, null);
 
             // Apply application processor
-            new ApplicationProcessor(getTypes(), getApplicationTypes(extraClasses), appClassLoader).process(document, null);
+            File userDir = new File(System.getProperty("user.dir"));
+            File modelDir = new File(userDir, "target" + File.separator + "test-classes");
+
+            new ApplicationProcessor(OpenAPISupplier.typesToMap(getTypes(), modelDir.toURI()), getApplicationTypes(extraClasses), getApplicationTypes(extraClasses), appClassLoader)
+                    .process(document, null);
             if (filter != null) {
-                new FilterProcessor(filter.newInstance()).process(document, null);
+                new FilterProcessor(filter.getDeclaredConstructor().newInstance()).process(document, null);
             }
             return document;
-        } catch (IOException | IllegalAccessException | InstantiationException | InterruptedException ex) {
+        } catch (IOException | IllegalAccessException | InstantiationException | InterruptedException | NoSuchMethodException | IllegalArgumentException | InvocationTargetException ex) {
             throw new AssertionError("Failed to build document.", ex);
         }
     }
